# robot_editor

./: CMakeLists.txt  README.md  first  image.qrc  package.xml  second
include/: highlighter.h  mainwindow.h  robot_preview.h  ui_mainwindow.h
modelos/: 2dof.gv  3dof.dae  3dof.urdf  3dofPrueba.urdf  3dofUNI.urdf  3dof_ikfast.cpp  Cylindrical.gv  Mi2DOF.urdf  Mi3DOF.urdf  Mi3DOF1.urdf  cartesian.urdf  cylindrical.dae  cylindrical.urdf  example.urdf  machote.urdf  test3dof.robot.xml  two_link_planar_xy.urdf
src/: codeeditor.cpp  highlighter.cpp  main.cpp  mainwindow.cpp  robot_editor.cpp  robot_preview.cpp
ui/: main_window.ui  mainwindow.ui
